Fix 'Hardly distinguishable line colors in reports'

The color palette used for a diagram can now be modified in
individual reports.

BUG:408361
FIXED-IN:4.8.4